[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
candid = "0.7.8"  # Specify a stable version for ICP compatibility
ic-cdk = "0.6.2"  # Use a compatible version from crates.io

[lib]
name = "app"
path = "src/lib.rs"